--- a/pom.xml
+++ b/pom.xml
@@ -114,5 +114,10 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.5</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.6</version>
+        </dependency>
     </dependencies>
 </project>
