--- a/pom.xml
+++ b/pom.xml
@@ -119,5 +119,10 @@
             <artifactId>junit</artifactId>
             <version>4.6</version>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>4.5.13</version>
+        </dependency>
     </dependencies>
 </project>
